## 3.4.0

- New: Initial support for viewing userfields (custom values) on stock overview page (#601)
- Fixed: On purchase page, decimal places for displaying prices were used for quantity unit
  conversion instead of decimal places for input (#778)
- Fixed: Form validation bug on inventory page when using quantity unit conversion
- Fixed: Chores filter for due entries was not working (#760)

## 3.3.2

- New: Compatibility for server version 4.0.2 and 4.0.3 (#772)
- Fixed: Network error when consuming or purchasing (and other actions), due to new rule for API
  requests which Grocy server 4.0.3 introduced (#772)
- Fixed: Product information not saved when going back (#765)
- Fixed: Missing delete confirmation in recipe edit mode (#764)

? Sorry for any inconvenience caused by the bugs above.
Other bug fixes and new features will come soon, once the main developer of this app
finishes his computer science studies in a few weeks.

## 3.3.1

- New: Compatibility for server version 4.0.1
- New: Targeting Android 14
- Improved: Changed that prices on the shopping list (extra fields) are now related to the selected
  quantity unit (instead of to the product's QU stock as before) (change from server version 4.0.1)
- Improved: Tasks can now be sorted by category (#753)
- Fixed: Wrong title alignment in some list bottom sheets
- Fixed: Crash when product overview dialog is called when shopping lists feature is disabled (#750)
- Fixed: Grouping option in shopping mode was not saved (#754)
- Fixed: Chore details not opening (#748)
- Fixed: Quantity unit conversions were wrong in some cases (thanks @jrandiny) (#744, #745).
  Please report any remaining bugs related to unit conversion as testing this is difficult
- Fixed: Other conversion bug on shopping list item edit page which occurred when unit from
  shopping list item was the product's default purchase unit (hopefully fixed)

## 3.3.0
